--- a/m2-d2.css
+++ b/m2-d2.css
@@ -1,9 +1,9 @@
 body {
 	background-color: rgb(31, 31, 31);
 }
-.album-container {
+/*.album-container {
 	height: 100%;
-}
+}*/
 .worst-container {
 	max-height: 50%;
 }
